ensure that all borders are displayed when printing to PDF, and try to reduce page breaks in places where there shouldn't be page breaks

--- a/app/assets/stylesheets/resume.scss
+++ b/app/assets/stylesheets/resume.scss
@@ -25,16 +25,18 @@
       font-weight: bold;
       font-size: 120%;
       text-transform: lowercase;
-      border-bottom: 1px solid lighten($base_font_color, 25%);
+      border-bottom: 2px solid $med_border_color;
+      break-after: avoid;
     }
     dd {
+      padding-top: .5em;
       margin: 0 0 2em 2em;
       text-align: justify;
     }
   }
   ul {
     list-style-type: circle;
-    margin: .5em 0 2em 1.5em;
+    margin: 0 0 2em 1.5em;
     padding: 0;
     li {
       margin: 0;
@@ -46,6 +48,7 @@
     margin: 0;
     padding: 0;
     li.experience {
+      break-inside: avoid;
       padding: .5em 0 1em 0;
       .left {
         width: 60%;
@@ -62,6 +65,10 @@
       .clear {
         clear: both;
         border-bottom: 1px solid #dddddd;
+      }
+      ul {
+        margin-bottom: 0;
+        padding-bottom: 0;
       }
     }
   }
